--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 main {
-    width: 90px;
+    color: white;
+    width: 90%;
     margin: auto;
     border: 1px solid red;
     background: #8c1a1a;
